#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(sstoraged, 0.1.2, sugiura@isp.co.jp)
AM_INIT_AUTOMAKE(sstoraged, 0.1.2, no-define)
AC_CONFIG_SRCDIR([src/main.cpp])
AC_CONFIG_HEADER([include/config.h])
AC_CONFIG_MACRO_DIR([m4])

# Checks for programs.
AC_PROG_CXX
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

# Checks for libraries.
AX_BOOST_BASE([1.34],, [AC_MSG_ERROR([This program needs Boost, but it was not found in your system])])
AX_BOOST_IOSTREAMS
AX_BOOST_REGEX
AX_BOOST_THREAD
#AC_CHECK_LIB([boost_iostreams], [main])
#AC_CHECK_LIB([boost_regex], [main],, 
#AC_CHECK_LIB([boost_regex-gcc33], [main],,
#AC_CHECK_LIB([boost_regex-mgw34-mt-1_34_1], [main],,
#[AC_MSG_ERROR([You need the C++ boost regex library.])]
#)))
#AC_CHECK_LIB([boost_thread], [main],, 
#AC_CHECK_LIB([boost_thread-gcc33-mt], [main],,
#AC_CHECK_LIB([boost_thread-mgw34-mt-1_34_1], [main],,
#[AC_MSG_ERROR([You need the C++ boost thread library.])]
#)))

#AC_CHECK_LIB([log4cxx], [main],,[AC_MSG_ERROR([You need the log4cxx library.])])
AC_CHECK_LIB([log4cxx], [main])
#AC_CHECK_LIB([aio], [main],,[AC_MSG_ERROR([You need the Linux AIO library, libaio.])])
AC_CHECK_LIB([aio], [main])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h fcntl.h netdb.h net/if.h netinet/in.h scsi/scsi.h stddef.h stdint.h stdlib.h string.h sys/ioctl.h sys/socket.h sys/uio.h syslog.h unistd.h libaio.h winsock2.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_MODE_T
AC_TYPE_SIZE_T
AC_HEADER_TIME

# Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_SELECT_ARGTYPES
AC_FUNC_STRERROR_R
AC_CHECK_FUNCS([daemon memmove memset select socket strchr strerror strerror_r strncasecmp])

AC_CONFIG_FILES([Makefile
		 include/Makefile
		 include/json/Makefile
		 include/iscsi/Makefile
		 include/scsi/Makefile
                 src/Makefile
		 src/json/Makefile
		 src/json/unittest/Makefile
		 src/iscsi/Makefile
		 src/scsi/Makefile
		 src/unittest/Makefile
		 test/Makefile
                 man/Makefile
		 redhat/Makefile])
AC_OUTPUT
